fix horizontal scroll mobile

--- a/style-portfolio.css
+++ b/style-portfolio.css
@@ -99,6 +99,12 @@ section.slider__section {
 }
 
 @media screen and (max-width: 768px) {
+  document,
+  body {
+    width: 100%;
+    overflow: hidden;
+  }
+
   .portfolio-menu {
     padding-top: 80px !important;
   }
